# terrific-audio-driver

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  about.toml  deny.toml
.github/workflows/: rust.yml
audio-driver/: GNUmakefile
audio-driver/64tass-api/: README.md  tad-code.inc  tad-lowram.inc  tad-process.inc  tad-variables-private.inc  tad-variables-public.inc  tad-zeropage.inc
audio-driver/asar-api/: README.md  tad-constants.inc  tad-control.inc  tad-process.inc  tad-variables.inc
audio-driver/ca65-api/: README.md  tad-audio.inc  tad-audio.s
audio-driver/pvsneslib-api/: README.md  tad-audio.asm  tad-audio.h
audio-driver/src/: audio-driver.asm  audio-driver.wiz  blank-song.wiz  bytecode.inc  bytecode.wiz  common-memmap.inc  common_memmap.wiz  data-formats.inc  data-formats.wiz  io-commands.inc  io-commands.wiz  loader.asm  loader.wiz  registers.inc  registers.wiz
crates/brr/: Cargo.toml
crates/compiler/: Cargo.toml  LICENSE  build.rs
crates/compiler/examples/: test_bc_interpreter.rs
crates/compiler/src/: bytecode.rs  bytecode_assembler.rs  bytecode_interpreter.rs  channel_bc_generator.rs  command_compiler.rs  common_audio_data.rs  data.rs  driver_constants.rs  echo.rs  envelope.rs  errors.rs  export.rs  file_pos.rs  identifier.rs  invert_flags.rs  lib.rs  mml.rs  mml_command_parser.rs  mml_tick_count.rs  newtype_macros.rs  notes.rs  number_parsing.rs  path.rs  pitch_table.rs  project.rs  samples.rs  sfx_file.rs  songs.rs  sound_effects.rs  spc_file_export.rs  subroutines.rs  tad_apu.rs  textfile.rs  time.rs  value_newtypes.rs
crates/compiler/src/command_compiler/: analysis.rs  channel_bc_generator.rs  commands.rs  parsers.rs  subroutines.rs
crates/compiler/src/export/: asar.rs  ca65.rs  pvsneslib.rs  tass64.rs
crates/compiler/src/mml/: bc_generator.rs  command_parser.rs  identifier.rs  instruments.rs  line_splitter.rs  metadata.rs  note_tracking.rs  song_duration.rs  subroutines.rs  tick_count_table.rs  tokenizer.rs
crates/compiler/tests/: mml.rs  sfx_dropout_tests.rs  terrificaudio_json.rs
crates/compiler/tests/mml/: bc_asm.rs  broken_chord.rs  cursor_song_tick_mapping.rs  detune.rs  early_release.rs  echo.rs  header.rs  instruments_and_envelope.rs  key_signature.rs  keyon_without_keyoff.rs  loops.rs  main.rs  misc_instructions.rs  note_range_tracking.rs  notes.rs  old_transpose.rs  parsing.rs  pitch.rs  portamento.rs  quantize.rs  rest_wait.rs  song_loop_point.rs  subroutines.rs  temp_gain.rs  transpose.rs  vibrato.rs  volume_pan.rs
crates/shvc-sound-emu/: Cargo.toml  LICENSE  README.md  build.rs
crates/shvc-sound-emu/src/: lib.rs  sample-buffer.hpp  shvc-sound-emu.cpp  shvc-sound-emu.hpp
crates/shvc-sound-emu/src/dsp/: dsp.cpp  dsp.hpp  echo.cpp  voice.cpp
crates/shvc-sound-emu/src/smp/: io.cpp  smp.cpp  smp.hpp  timing.cpp
crates/shvc-sound-emu/src/spc700/: spc700.cpp  spc700.hpp
crates/spc700asm/: Cargo.toml  LICENSE  README.md
crates/tad-compiler/: Cargo.toml
crates/tad-emu/: Cargo.toml
crates/tad-emu/src/: lib.rs
crates/tad-gui/: Cargo.toml  build.rs
crates/tad-gui/src/: about_tab.rs  audio_thread.rs  compiler_thread.rs  dialogs.rs  drag_and_drop.rs  driver_state_window.rs  envelope_widget.rs  files.rs  help.rs  helpers.rs  instrument_editor.rs  licenses_dialog.rs  list_editor.rs  main.rs  menu.rs  mml_editor.rs  monitor_timer.rs  names.rs  project_tab.rs  sample_analyser.rs  sample_editor.rs  sample_sizes_widget.rs  sample_widgets.rs  samples_tab.rs  sfx_export_order.rs  sfx_window.rs  song_tab.rs  sound_effects_tab.rs  symbols.rs  tables.rs  tabs.rs  test_sample_widget.rs
crates/tad-gui/src/audio_thread/: audio_stream.rs  resampling_ring_buffer.rs
crates/wav2brr/: Cargo.toml
crates/wav2brr/src/: main.rs
docs/: bytecode-assembly-syntax.md  changelog.md  licenses-md.hbs  licenses-short-md.hbs  licenses-short.md  licenses.md  mml-syntax.md  samples.md  sound-effects.md  special-thanks.md
examples/: example-project.terrificaudio  sound-effects.txt
examples/bc-interpreter-tests/: adjust-echo-i8-limit.mml  early-release-and-temp-gain.mml  echo-stress-test.mml  large-skip-last-loop.mml
examples/bug-tests/: envelope-race-condition.mml  keyoff-scrn-bug.mml  noise-and-sfx-test.mml  subroutine-vibrato-bug.mml  tremolo-underflow-bug.mml  two-channels-modify-timer.mml  unbalanced-vibrato-bug.mml  vibrato-after-portamento.mml  volume-pop-bug.mml
examples/mml/: bc-asm-in-mml.mml  broken-chord.mml  chords-transpose.mml  chords.mml  continuous-portamento.mml  detune.mml  early-release.mml  echo.mml  fir.mml  multi-channel-noise.mml  pan-slide.mml  pan.mml  panbrello.mml  pitch-modulation.mml  play-noise.mml  play-pitch.mml  portamento.mml  quantize-with-temp-gain.mml  samples.mml  tremolo.mml  vibrato.mml  volume-slide.mml
examples/mml-tests/: chords.mml  detune.mml  early-release.mml  echo.mml  multi-channel-noise.mml  pan-slide.mml  panbrello.mml  pitch-modulation.mml  play-noise.mml  play-pitch.mml  quantize-with-temp-gain.mml  test-bc-asm-in-mml.mml  test-broken-chord.mml  test-echo.mml  test-envelope.mml  test-fir.mml  test-loop.mml  test-pan.mml  test-portamento.mml  test-samples.mml  test-set-echo-delay.mml  test-subroutine-play-at-cursor.mml  test-vibrato.mml  tremolo.mml  volume-slide.mml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bytecode_sfx.rs  fuzz_mml_song.rs
manual-tests/: manual-tests.terrificaudio  sound-effects.txt
manual-tests/bc-interpreter-tests/: adjust-global-i8-limit.mml  main-volume.mml
manual-tests/bug-tests/: portamento-first-tick-bugtest.mml  subroutine-cursor-tick-count-bug.mml  subroutine-vibrato-bug.mml  vibrato-after-portamento.mml  volume-slide-down-bug.mml
manual-tests/manual/: cut-portamento-unknown-velocity.mml  lag-tester.mml  noise-priority-test.mml  portamento-without-instrument.mml  tempo-and-timer.mml  transpose.mml  vibrato-with-delay.mml
manual-tests/mml/: channel-transpose.mml  disable-keyoff.mml  echo-invert.mml  invert.mml  key-signature.mml  loop-stack.mml  noise-priority-test.mml  noise-timing-test-a.mml  noise-volume-restored-test.mml  (+2 more)
(+76 files in other folders)
