[workspace]
resolver = "2"

members = [
    "crates/brr",
    "crates/compiler",
    "crates/shvc-sound-emu",

    "crates/tad-compiler",
    "crates/tad-gui",
    "crates/wav2brr",
]


[profile.release]
strip = true
opt-level = "z"
lto = true

[profile.release.package.brr]
opt-level = 3

[profile.release.package.compiler]
opt-level = 3

[profile.release.package.shvc-sound-emu]
opt-level = 3


[workspace.package]
version = "0.0.11"

publish = false


[workspace.dependencies]
# Local library crates
brr = { path = "./crates/brr", version = "0.0.0" }
compiler = { path = "./crates/compiler", version = "0.0.0", features = [] }
shvc-sound-emu = { path = "./crates/shvc-sound-emu", version = "0.0.0" }

# Local binary crates
tad-compiler = { path = "./crates/tad-compiler", version = "0.0.0" }
wav2brr = { path = "./crates/wav2brr", version = "0.0.0" }

# External crates
clap = { version="4.5.16", features=[ "derive" ] }
serde = { version="1.0.164", features=[ "derive" ] }
serde_json = { version="1.0.97" }
relative-path = { version="1.9.0", features=[ "serde" ] }

sdl2 = { version="0.37.0", features=[] }
spectrum-analyzer = { version="1.5.0" }

# fltk-rs 1.4.20 has a bug where the group::Tabs tab height is way too tall and the contents are not visible
# fltk-rs 1.4.21 has an illegal instruction crash when creating a native save-as dialog
fltk = { version="1.4.34", features = ["use-ninja"] }

cxx = { version="1.0.107" }

# External build dependencies
#
# Chose markdown as it has a security section in its readme file
# NOTE: Must use the alpha build.  This is a new crate that reuses an old name.
markdown = { version="1.0.0-alpha.21" }

regex = { version="1.10.2" }

cxx-build = { version="1.0.107" }


