[workspace]
resolver = "2"

members = [
    "crates/brr",
    "crates/compiler",
    "crates/shvc-sound-emu",
    "crates/tad-emu",

    "crates/tad-compiler",
    "crates/tad-gui",
    "crates/wav2brr",
]


[profile.release]
strip = true
opt-level = "z"
lto = true

[profile.release.package.brr]
opt-level = 3

[profile.release.package.compiler]
opt-level = 3

[profile.release.package.shvc-sound-emu]
opt-level = 3


[workspace.package]
rust-version = "1.75"

version = "0.1.0-beta.1"

publish = false


[workspace.dependencies]
# Local library crates
brr = { path = "./crates/brr", version = "0.0.0" }
compiler = { path = "./crates/compiler", version = "0.0.0", features = [] }
shvc-sound-emu = { path = "./crates/shvc-sound-emu", version = "0.0.0" }
tad-emu = { path = "./crates/tad-emu", version = "0.0.0" }

# Local binary crates
tad-compiler = { path = "./crates/tad-compiler", version = "0.0.0" }
wav2brr = { path = "./crates/wav2brr", version = "0.0.0" }

# External crates
clap = { version="4.5.16", features=[ "derive" ] }
serde = { version="1.0.164", features=[ "derive" ] }
serde_json = { version="1.0.97" }
relative-path = { version="1.9.0", features=[ "serde" ] }

sdl2 = { version="0.37.0", features=[] }
spectrum-analyzer = { version="1.6.0" }

fltk = { version="1.5.0", features = ["use-ninja"] }

cxx = { version="1.0.141" }

# External build dependencies
#
# Chose markdown as it has a security section in its readme file
# NOTE: Must use the alpha build.  This is a new crate that reuses an old name.
markdown = { version="1.0.0-alpha.14" }

regex = { version="1.10.2" }

cxx-build = { version="1.0.107" }


