[package]
name = "tad-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[workspace]
members = ["."]

[dependencies.compiler]
path = "../crates/compiler"

[[bin]]
name = "fuzz_bytecode_sfx"
path = "fuzz_targets/fuzz_bytecode_sfx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mml_song"
path = "fuzz_targets/fuzz_mml_song.rs"
test = false
doc = false
bench = false

