[package]
name = "compiler"

license = "MIT"

edition = "2021"

publish = false

# This is a private internal crate.
# Using version "0.0.0" as I do not care about breaking changes.
version = "0.0.0"


[features]
default = []
mml_tracking = []


[dependencies]
# Local crates
brr.workspace = true

# External crates
serde.workspace = true
serde_json.workspace = true
relative-path.workspace = true

