[package]
name = "shvc-sound-emu"

license = "ISC"

edition = "2021"

publish = false

# This is a private internal crate.
# Using version "0.0.0" as I do not care about breaking changes.
version = "0.0.0"


[dependencies]
# External crates
cxx.workspace = true

[build-dependencies]
cxx-build.workspace = true

