[package]
name = "tad-gui"
description = "GUI app"
license = "MIT"

edition = "2021"

publish = false

# Use the same version as `tad-compiler`
version.workspace = true


[dependencies]
# Local crates
compiler = { workspace = true, features = ["mml_tracking"] }
shvc-sound-emu.workspace = true

# External crates
fltk.workspace = true
sdl2.workspace = true

[build-dependencies]
markdown.workspace = true
regex.workspace = true

